--- a/.github/workflows/v6_guides_renderer.yml
+++ b/.github/workflows/v6_guides_renderer.yml
@@ -75,6 +75,11 @@ jobs:
 
           with sync_playwright() as p:
               browser = p.chromium.launch(headless=True)
+              version_attr = getattr(browser, "version", None)
+              if callable(version_attr):
+                  browser_version = version_attr()
+              else:
+                  browser_version = "unknown"
               context = browser.new_context(
                   viewport={"width": 1440, "height": 900},
                   locale="en-US",
@@ -136,7 +141,7 @@ jobs:
                       .replace("+00:00", "Z"),
                       "render_engine": "playwright",
                       "browser_name": "chromium",
-                      "browser_version": browser.version(),
+                      "browser_version": browser_version,
                       "user_agent": "PineScript-Builder rendered acquisition/0.1",
                       "viewport": {"width": 1440, "height": 900},
                       "locale": "en-US",
